# http_sfv

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENCE.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: main.yml  publish.yml  test.yml
http_sfv/: __init__.py  __main__.py  bare_item.py  boolean.py  byteseq.py  decimal.py  dictionary.py  display_string.py  innerlist.py  integer.py  item.py  list.py  parameters.py  retrofit.py  string.py  token.py  types.py  util.py  util_binary.py  util_json.py
shhh/: __init__.py  __main__.py  boolean.py  byteseq.py  decimal.py  dictionary.py  float.py  identifier.py  integer.py  item.py  list.py  listlist.py  paramlist.py  string.py  token.py  util.py
test/: binary.py  download.sha256  harfile.py  mypy.ini  pylintrc  sf.blab  test.py  test_api.py  test_perf.py
