[project]
name = "http_sfv"
dynamic = ["version", "readme"]
authors = [
    {name="Mark Nottingham", email="mnot@mnot.net"}
]
description = "Parse and serialise HTTP Structured Field Values"
requires-python = ">=3.8"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Operating System :: POSIX",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "typing_extensions"
]

[project.optional-dependencies]
dev = ["mypy", "playwright", "black", "validate-pyproject"]

[tool.setuptools.dynamic]
version = {attr = "http_sfv.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["http_sfv"]
defineConstant = { DEBUG = true }
venv = ".venv"
reportMissingImports = true
pythonVersion = "3.11"
pythonPlatform = "Darwin"

[tool.mypy]
follow_imports = "normal"
incremental = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = false
show_error_codes = true

[tool.pylint.basic]
function-rgx = "[a-z_][a-z0-9_]{1,30}$"
variable-rgx = "[a-z_][a-z0-9_]{1,30}$"
attr-rgx = "[a-z_][a-z0-9_]{1,30}$"
argument-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-attribute-rgx = "([A-Za-z_][A-Za-z0-9_]{1,30}|(__.*__))$"
method-rgx = "[a-z_][a-z0-9_]{1,30}$"
class-rgx = "[a-zA-Z0-9_]+$"

[tool.pylint.messages_control]
disable = "C0114,C0115,C0116,W0613"

[tool.pylint.reports]
reports = false

[tool.pylint.variables]

[tool.pylint.design]
max-args=10
max-locals=35
max-branches=25
max-statements=100
max-attributes=40
min-public-methods=1

[tool.pylint.similarities]
min-similarity-lines = 10
