[metadata]
name = http_sfv
version = attr: http_sfv.__version__
author = Mark Nottingham
author_email = mnot@mnot.net
description = Parse and serialise HTTP Structured Field Values
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mnot/http_sfv
project_urls =
    Bug Tracker = https://github.com/mnot/http_sfv/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Operating System :: POSIX
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules

[options]

packages = find:
python_requires = >=3.7

[options.extras_require]
dev = mypy; black

[options.package_data]
http_sfv =
    py.typed
